<resources>
    <string name="app_name">TeamRegistrations</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="user1">User 1 : </string>
    <string name="user2">User 2 : </string>
    <string name="user3">User 3 : </string>
    <string name="ent_no">Entry No : </string>
    <string name="title_activity_data_entry">DataEntry</string>
    <string name="title_activity_data_entry_popup">DataEntryPopup</string>
</resources>
