<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rishab.as.PreviewActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:weightSum="1"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_name"
                android:text="Team Name"
                android:gravity="center"
                android:layout_weight="0.16"
                android:textColor="#000"
                android:textSize="30dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="92dp"
                    android:src="@drawable/user1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:text="@string/user1" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="16dp" />
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/user1"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:text="@string/ent_no" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="16dp" />
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ent_no1"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="92dp"
                    android:src="@drawable/user2" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:text="@string/user2" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="16dp" />
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/user2"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:text="@string/ent_no" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="16dp" />
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ent_no2"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="92dp"
                    android:src="@drawable/user3" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:text="@string/user3" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="16dp" />
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/user3"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:text="@string/ent_no" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="16dp" />
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ent_no3"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit"
                    android:id="@+id/button2"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:onClick="edit"
                    android:clickable="true"
                    android:background="@drawable/border"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm"
                    android:id="@+id/button"
                    android:layout_weight="0.5"
                    android:onClick="send_confirmation"
                    android:clickable="true"
                    android:textColor="#fff"
                    android:background="@drawable/border" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
